fixed spacing and text color

--- a/src/routes/invoice-details/invoice-details.module.scss
+++ b/src/routes/invoice-details/invoice-details.module.scss
@@ -25,6 +25,9 @@
       line-height: $goa-line-height-6;
       margin-bottom: $goa-space-l;
     }
+    .summaryContainer {
+      margin-top: $goa-space-l;
+    }
   }
   .main {
     overflow-y: auto;
@@ -77,20 +80,19 @@
   gap: calc($goa-space-xs + $goa-space-3xs);
 }
 
-
 .tableInvoiceHeader {
   overflow-x: auto;
   max-width: 100%;
   tr td {
-    padding:0;  
+    padding: 0;
   }
   tr td:nth-child(1) {
-    width:30%;
+    width: 30%;
   }
   tr td:nth-child(2) {
-    width:65%;
+    width: 65%;
   }
   tr td:nth-child(3) {
-    width:5%;
+    width: 5%;
   }
 }
