--- a/src/routes/invoice-details/summary.module.scss
+++ b/src/routes/invoice-details/summary.module.scss
@@ -12,7 +12,7 @@
       line-height: $goa-line-height-1;
     }
     div:nth-child(2) {
-      color: $goa-color-info-default;
+      color: $goa-color-text-default;
       font: $goa-typography-body-s;
       line-height: $goa-line-height-2;
     }
